--- a/MDGuiGtk2/packages.config
+++ b/MDGuiGtk2/packages.config
@@ -1,6 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Eto.Forms" version="2.3.0" targetFramework="net45" />
-  <package id="Eto.Platform.Gtk" version="2.3.0" targetFramework="net45" />
+  <package id="AtkSharp" version="3.22.24.29" targetFramework="net461" />
+  <package id="CairoSharp" version="3.22.24.29" targetFramework="net461" />
+  <package id="Eto.Forms" version="2.4.1" targetFramework="net461" />
+  <package id="Eto.Platform.Gtk" version="2.4.1" targetFramework="net461" />
+  <package id="GdkSharp" version="3.22.24.29" targetFramework="net461" />
+  <package id="GioSharp" version="3.22.24.29" targetFramework="net461" />
+  <package id="GLibSharp" version="3.22.24.29" targetFramework="net461" />
+  <package id="GtkSharp" version="3.22.24.29" targetFramework="net461" />
   <package id="OpenWebKitSharp" version="1.0.7" targetFramework="net45" />
+  <package id="PangoSharp" version="3.22.24.29" targetFramework="net461" />
+  <package id="System.ComponentModel" version="4.3.0" targetFramework="net461" />
+  <package id="System.Runtime.Serialization.Primitives" version="4.3.0" targetFramework="net461" />
 </packages>
